--- a/Blogpost.html
+++ b/Blogpost.html
@@ -16,6 +16,11 @@
             <p>
               y este es el parrafo de inicio donde vamos a explicar las cosas increbles que se pueden hacer
             </p>
+            <p>
+              los blogs son la mejor forma de compartir informacion y tus ideas.
+              mucho mas que ir a conferencias o salir en youtube.
+              exepto si eres un rockstar. pero estadisticamente no lo eres... por ahora
+            </p>
         </div>
       </div>
 </body>
