se agrego parrafo, cabecera a maestro y color azul

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -10,7 +10,7 @@
 <body>
       <div id="container">
         <div id="cabecera">
-              Hyperblog <span id="tagline">Tu blog de confianza </span>
+              Hyperblog <span id="tagline">Tu blog de maestro </span>
         </div>
         <div id="post">
             <h1>
@@ -23,6 +23,9 @@
               los blogs son la mejor forma de compartir informacion y tus ideas.
               mucho mas que ir a conferencias o salir en youtube.
               exepto si eres un rockstar. pero estadisticamente no lo eres... por ahora
+            </p>
+            <p>
+              suscribrete y dale like!
             </p>
         </div>
       </div>
