Modificacion de background, Agregado logo

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -10,6 +10,7 @@
 <body>
       <div id="container">
         <div id="cabecera">
+              <img src="logo" alt="css/imagenes/Stampeed.webp">
               Hyperblog <span id="tagline">Tu blog de cabecera </span>
         </div>
         <div id="post">
