actualizacion del logo a PNG y correccion de bugs.

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -10,7 +10,7 @@
 <body>
       <div id="container">
         <div id="cabecera">
-              <img src="logo" alt="css/imagenes/Stampeed.webp">
+              <img id="logo" src="css/imagenes/Stampeed.png">
               Hyperblog <span id="tagline">Tu blog de cabecera </span>
         </div>
         <div id="post">
