--- a/Blogpost.html
+++ b/Blogpost.html
@@ -18,7 +18,7 @@
               Este es el titulo actractivo e interesante del post
             </h1>
             <p>
-              y este es el parrafo de inicio donde vamos a explicar las cosas increbles que se pueden hacer
+              y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer
             </p>
             <p>
               los blogs son la mejor forma de compartir informacion y tus ideas.
