--- a/Blogpost.html
+++ b/Blogpost.html
@@ -20,6 +20,7 @@
             <p>
               y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&aacute;bles que se pueden hacer
             </p>
+            <p><img id="image_1" src="https://i.imgur.com/gYUmUTc.jpeg" width="70%"></p>
             <p>
               los blogs son la mejor forma de compartir informacion y tus ideas.
               mucho mas que ir a conferencias o salir en youtube.
